--- a/zhundao/Info.plist
+++ b/zhundao/Info.plist
@@ -108,6 +108,8 @@
 	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>检测周边开启的蓝牙设备,配合打印机</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>检测周边开启的蓝牙设备,配合打印机</string>
 	<key>NSCameraUsageDescription</key>
 	<string>使用相机对签到对象二维码进行扫码验证</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
