--- a/zhundao/Info.plist
+++ b/zhundao/Info.plist
@@ -135,12 +135,10 @@
 	<string>开启对活动位置的定位</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>开启对活动位置的定位</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>视频录制上传头像</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>用于二维码截图</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>相册</string>
+	<string>从相册中获取图片，用于头像，发布活动</string>
 	<key>UIAppFonts</key>
 	<array/>
 	<key>UIBackgroundModes</key>
